tests/programs/type-errors/impl_bad_intf.rice
struct Foo(i32);

impl Bar for Foo {}

fn main() { () }